external-crates/move/crates/move-compiler/tests/move_2024/unit_test/expected_failure_constants_shadowed_module_invalid.unit_test.exp
error[E10003]: invalid attribute value
   ┌─ tests/move_2024/unit_test/expected_failure_constants_shadowed_module_invalid.move:10:24
   │
10 │     #[expected_failure(abort_code=a::a::C)]
   │                        ^^^^^^^^^^^^^^^^^^
   │                        │          │
   │                        │          Unsupported value in this assignment
   │                        Invalid value in attribute assignment

